[gd_scene load_steps=3 format=3 uid="uid://7j85lryucfwc"]

[ext_resource type="Script" path="res://scripts/enemies_scripts/enemie_hitbox_component.gd" id="1_5cq3d"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cguhj"]
radius = 5.0

[node name="EnemieHitboxComponent" type="Node2D"]
script = ExtResource("1_5cq3d")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_cguhj")

[node name="RepeatedAreaEnteredSignal" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="RepeatedAreaEnteredSignal" to="." method="_on_repeated_area_entered_signal_timeout"]
